# django_study

./: db.sqlite3  pyproject.toml
bookmark/: admin.py  models.py  views.py
bookmark/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: book_list.html  bookmark_detail.html  bookmark_list.html  game.html  games.html  gugu.html  gugu_detail.html  todo_info.html  todo_list.html
templates/registration/: login.html  signup.html
templates/todo/: base.html  todo_create.html  todo_info.html  todo_list.html  todo_update.html
todo/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_initial.py  0002_todo_user.py  0003_comment.py  0004_todo_completed_image_todo_thumbnail.py
users/: models.py  views.py
users/migrations/: 0001_initial.py
