[tool.poetry]
name = "bookmark"
version = "0.1.0"
description = ""
authors = ["Mashiro2465 <rlaalstjr2465@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
