[tool.poetry]
name = "bookmark"
version = "0.1.0"
description = ""
authors = ["Mashiro2465 <rlaalstjr2465@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
django-extensions = "^4.1"
django-summernote = "^0.8.20.0"
pillow = "^12.1.1"
django-cleanup = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
